IA-ML/Yamls-deploy/langflow/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: langflow-service
  namespace: langflow
  labels:
    app: langflow
spec:
  type: ClusterIP
  ports:
    - port: 7860
      targetPort: 7860
      protocol: TCP
      name: http
  selector:
    app: langflow
