IA-ML/Yamls-deploy/langflow/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
 name: langflow-route
 namespace: langflow
 labels:
   app: langflow
spec:
 to:
   kind: Service
   name: langflow-service
 port:
   targetPort: http
 tls:
   termination: edge
   insecureEdgeTerminationPolicy: Redirect
